# relativistic_turbulence_rg

./: .bandit  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  QWEN.md  README.md  analyze_field_theory.py  debug_causality.py  generate_report.py  mind-map.md  open_issues.md  pyproject.toml  pytest.ini  report_cleanup1.md
.github/workflows/: ci.yml
plan/: Israel-Stewart Theory.md  Israel-Stewart_Theory.md  MSRJD_Formalism.md  RG_Turbulence_Methods.md  bugs1.md  chatgpt_buglist.md  claude-plan.md  phase2_test_fixes.md  relativistic-rg-implementation.md  rtrg-task-list.md  simplified_full_issues.md  unification.md
rtrg/: __init__.py
rtrg/analysis/: __init__.py
rtrg/core/: __init__.py  calculator_factory.py  calculator_implementations.py  calculators.py  constants.py  fields.py  parameters.py  registry_base.py  registry_converter.py  registry_factory.py  tensors.py  tensors_deprecate.py
rtrg/field_theory/: __init__.py  feynman_rules.py  msrjd_action.py  phase_integration.py  physics_validation.py  propagators.py  propagators_simple.py  symbolic_tensors.py  tensor_action_expander.py  tensor_msrjd_action.py  vertices.py
rtrg/israel_stewart/: __init__.py  constraints.py  equations.py  linearized.py  thermodynamics.py
rtrg/numerics/: __init__.py
rtrg/production/: __init__.py
rtrg/renormalization/: __init__.py  beta_functions.py  fixed_points.py  flow.py  one_loop.py
rtrg/symbolic/: __init__.py
rtrg/visualization/: __init__.py  propagator_plots.py  tensor_diagrams.py
scripts/: README.md  build.sh  format.sh  test.sh
src/relativistic_turbulence_rg/: __init__.py
tests/: __init__.py  conftest.py
tests/benchmarks/: __init__.py  test_dispersion.py
tests/integration/: test_basic_feynman_rules_integration.py  test_basic_phase2_validation.py  test_phase2_tensor_validation.py  test_symbolic_tensor_integration.py
tests/integration/old/: test_basic_phase2_validation.py  test_complete_feynman_rules_system.py  test_covariant_derivative_physics.py  test_symbolic_tensor_integration.py
tests/unit/: test_feynman_rules.py  test_field_definitions.py  test_fields.py  test_linearized_is.py  test_msrjd_action.py  test_parameters.py  test_propagators.py  test_tensor_algebra.py  test_tensor_infrastructure.py  test_tensors.py  test_thermodynamics.py  test_tt_projector.py  test_unified_registry.py
tests/unit/old/: test_constraints.py  test_critical_bug_fixes.py  test_metric_constraint_fixes.py  test_symbolic_tensors.py  test_tensor_algebra.py  test_tensors.py  test_unified_registry.py
tools/: generate_mind_map.py
