[project]
name = "relativistic-turbulence-rg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aristos", email = "ai@atoms.eu" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pytest>=8.4.1",
    "scipy>=1.16.1",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
]

[project.scripts]
relativistic-turbulence-rg = "relativistic_turbulence_rg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
